<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_cliente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cliente"
                    style="@style/Widget.AppCompat.Button" />

                <Button
                    android:id="@+id/btn_fornec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fornecedor"
                    style="@style/Widget.AppCompat.Button" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_venda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/venda"
                    style="@style/Widget.AppCompat.Button" />

                <Button
                    android:id="@+id/btn_funcionario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/funcionario"
                    style="@style/Widget.AppCompat.Button" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_tipo_medic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tipo_medic"
                    style="@style/Widget.AppCompat.Button" />

                <Button
                    android:id="@+id/btn_medic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medic"
                    style="@style/Widget.AppCompat.Button" />
            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>